Re-enable comics 1-3, again

--- a/src/data/grammar/images/mtg-comic.yaml
+++ b/src/data/grammar/images/mtg-comic.yaml
@@ -8,9 +8,9 @@ svgComicHeadlinePrefix:
   - "Paths of the Planeswalkers"
 
 svgComicTemplate:
-  # - "#svgComicTemplate1#"
-  # - "#svgComicTemplate2#"
-  # - "#svgComicTemplate3#"
+  - "#svgComicTemplate1#"
+  - "#svgComicTemplate2#"
+  - "#svgComicTemplate3#"
   - "#svgComicTemplate4#"
 
 _svgComicDefaultTextSize:
